# SLAM

./: .gitignore
final/: CMakeLists.txt  CMakePresets.json  main.cpp
final/include/: camera.h  common_include.h  dataset.h  feature.h  frame.h  mappoint.h
final/src/: camera.cpp  dataset.cpp  feature.cpp  frame.cpp  mappoint.cpp
review/ch10/cmake/: FindCSparse.cmake
review/ch11/src/: feature_training.cpp  loop_closure.cpp
review/ch3/: CMakeLists.txt
review/ch3/src/: coordinateTransform.cpp  eigenMatrix.cpp  plotTrajectory.cpp  useGeometry.cpp
review/ch4/: CMakeLists.txt
review/ch4/src/: trajectoryError.cpp  useSophus.cpp
review/ch5/: CMakeLists.txt  CMakePresets.json
review/ch5/src/: CMakeLists.txt  imageBasis.cpp  stereoVision.cpp  undistoredImage.cpp
review/ch6/: CMakeLists.txt
review/ch6/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
review/ch7/: CMakeLists.txt
review/ch7/src/: orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_2d3d.cpp  test.cpp  triangulation.cpp
review/ch8/: CMakeLists.txt
review/ch8/src/: direct_method.cpp  implimentation.cpp  optical_flow.cpp  utils.h
review/ch9/src/: common.h
slambook2/ch10/: CMakeLists.txt  result_ceres.g2o
slambook2/ch10/src/: pose_graph_ceres.cpp  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
slambook2/ch11/: CMakeLists.txt
slambook2/ch2/: CMakeLists.txt  libHelloSLAM.cpp  main.cpp  useHello.cpp
slambook2/ch3/: CMakeLists.txt  coordinateTransform.cpp  main.cpp  plotTrajectory.cpp  useGeometry.cpp
slambook2/ch4/: CMakeLists.txt  trajectoryError.cpp  useSophus.cpp
slambook2/ch5/: CMakeLists.txt
slambook2/ch5/src/: imageBasics.cpp  jointMap.cpp  stereoVision.cpp  undistortImage.cpp
slambook2/ch6/: CMakeLists.txt
slambook2/ch6/src/: NoNeedToDerefrence.cpp  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
slambook2/ch7/: CMakeLists.txt
slambook2/ch7/src/: orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
slambook2/ch8/: CMakeLists.txt
slambook2/ch8/src/: direct_method.cpp  optical_flow.cpp
slambook2/ch9/: CMakeLists.txt
slambook2/ch9/src/: bundle_adjustment_g2o.cpp
